setup user registraion and required login

--- a/books/templates/book_list.html
+++ b/books/templates/book_list.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>KE's Freeshelf</title>
+        <title>KE's Bookshelf</title>
     </head>
 <body>
+    <header>
+        <h1><a href="/">Bookshelf</a></h1>
+    </header>
 {% for book in books %}
     <div>
     <p>{{ book.title }}</p>
