--- a/books/templates/book_list.html
+++ b/books/templates/book_list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>KE's Bookshelf</title>
+        <title>KE's Freeshelf</title>
     </head>
 <body>
     <header>
-        <h1><a href="/">Bookshelf</a></h1>
+        <h1><a href="/">Freeshelf</a></h1>
     </header>
 {% for book in books %}
     <div>
